ARM Templates/Deploy RG-VNET-NSG-LB-2VMs.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "functions": [],
    "variables": {},
    "resources": [{
        "name": "CONTOSO",
        "type": "Microsoft.Resources/resourceGroups",
        "apiVersion": "2021-05-01",
        "location": "westus",
        "dependsOn": [],
        "tags": {}
    },
    {
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "functions": [],
    "variables": {},
    "resources": [{
        "name": "[toLower('WEBVM1storage')]",
        "type": "Microsoft.Storage/storageAccounts",
        "apiVersion": "2021-04-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "displayName": "WEBVM1 Storage Account"
        },
        "sku": {
            "name": "Standard_LRS"
        },
        "kind": "Storage"
    },
    {
        "name": "WEBVM1-PublicIP",
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "displayName": "PublicIPAddress"
        },
        "properties": {
            "publicIPAllocationMethod": "Dynamic",
            "dnsSettings": {
                "domainNameLabel": "[toLower('WEBVM1')]"
            }
        }
    },
    {
        "name": "WEBVM1-nsg",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [
                {
                    "name": "nsgRule1",
                    "properties": {
                        "description": "description",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "3389",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Inbound"
                    }
                }
            ]
        }
    },
    {
        "name": "CONTOSOVNET",
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', 'WEBVM1-nsg')]"
        ],
        "tags": {
            "displayName": "CONTOSOVNET"
        },
        "properties": {
            "addressSpace": {
                "addressPrefixes": [
                    "10.0.0.0/16"
                ]
            },
            "subnets": [
                {
                    "name": "WEBSubnet",
                    "properties": {
                        "addressPrefix": "10.0.0.0/24",
                        "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'WEBVM1-nsg')]"
                        }
                    }
                }
            ]
        }
    },
    {
        "name": "WEBVM1-NetworkInterface",
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/publicIPAddresses', 'WEBVM1-PublicIP')]",
            "[resourceId('Microsoft.Network/virtualNetworks', 'WEBVM1-VirtualNetwork')]"
        ],
        "tags": {
            "displayName": "WEBVM1 Network Interface"
        },
        "properties": {
            "ipConfigurations": [
                {
                    "name": "ipConfig1",
                    "properties": {
                        "privateIPAllocationMethod": "Dynamic",
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'WEBVM1-PublicIP')]"
                        },
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'WEBVM1-VirtualNetwork', 'WEBVM1-VirtualNetwork-Subnet')]"
                        }
                    }
                }
            ]
        }
    },
    {
        "name": "WEBVM1",
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2021-03-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Storage/storageAccounts', toLower('WEBVM1storage'))]",
            "[resourceId('Microsoft.Network/networkInterfaces', 'WEBVM1-NetworkInterface')]"
        ],
        "tags": {
            "displayName": "WEBVM1"
        },
        "properties": {
            "hardwareProfile": {
                "vmSize": "Standard_A2_v2"
            },
            "osProfile": {
                "computerName": "WEBVM1",
                "adminUsername": "admin",
                "adminPassword": "adminPassword"
            },
            "storageProfile": {
                "imageReference": {
                    "publisher": "MicrosoftWindowsServer",
                    "offer": "WindowsServer",
                    "sku": "2019-datacenter-gensecond",
                    "version": "latest"
                },
                "osDisk": {
                    "name": "WEBVM1OSDisk",
                    "caching": "ReadWrite",
                    "createOption": "FromImage"
                }
            },
            "networkProfile": {
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces', 'WEBVM1-NetworkInterface')]"
                    }
                ]
            },
            "diagnosticsProfile": {
                "bootDiagnostics": {
                    "enabled": true,
                    "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower('WEBVM1storage'))).primaryEndpoints.blob]"
                }
            }
        }
    },
    {
        "name": "WEBVM2-PublicIP",
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "displayName": "PublicIPAddress"
        },
        "properties": {
            "publicIPAllocationMethod": "Dynamic",
            "dnsSettings": {
                "domainNameLabel": "[toLower('WEBVM2')]"
            }
        }
    },
    {
        "name": "WEBVM2-nsg",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [
                {
                    "name": "nsgRule1",
                    "properties": {
                        "description": "description",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "3389",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Inbound"
                    }
                }
            ]
        }
    },
    {
        "name": "WEBVM2-NetworkInterface",
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/publicIPAddresses', 'WEBVM2-PublicIP')]",
            "[resourceId('Microsoft.Network/virtualNetworks', 'WEBVM2-VirtualNetwork')]"
        ],
        "tags": {
            "displayName": "WEBVM2 Network Interface"
        },
        "properties": {
            "ipConfigurations": [
                {
                    "name": "ipConfig1",
                    "properties": {
                        "privateIPAllocationMethod": "Dynamic",
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'WEBVM2-PublicIP')]"
                        },
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'WEBVM2-VirtualNetwork', 'WEBVM2-VirtualNetwork-Subnet')]"
                        }
                    }
                }
            ]
        }
    },
    {
        "name": "WEBVM2",
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2021-03-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Storage/storageAccounts', toLower('WEBVM2storage'))]",
            "[resourceId('Microsoft.Network/networkInterfaces', 'WEBVM2-NetworkInterface')]"
        ],
        "tags": {
            "displayName": "WEBVM2"
        },
        "properties": {
            "hardwareProfile": {
                "vmSize": "Standard_A2_v2"
            },
            "osProfile": {
                "computerName": "WEBVM2",
                "adminUsername": "adminUsername",
                "adminPassword": "adminPassword"
            },
            "storageProfile": {
                "imageReference": {
                    "publisher": "MicrosoftWindowsServer",
                    "offer": "WindowsServer",
                    "sku": "2019-datacenter-gensecong",
                    "version": "latest"
                },
                "osDisk": {
                    "name": "WEBVM2OSDisk",
                    "caching": "ReadWrite",
                    "createOption": "FromImage"
                }
            },
            "networkProfile": {
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces', 'WEBVM2-NetworkInterface')]"
                    }
                ]
            },
            "diagnosticsProfile": {
                "bootDiagnostics": {
                    "enabled": true,
                    "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower('WEBVM2storage'))).primaryEndpoints.blob]"
                }
            }
        }
    },{
        "name": "VMWebLB",
        "type": "Microsoft.Network/loadBalancers",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/publicIPAddresses', 'publicIP1')]"
        ],
        "properties": {
            "frontendIPConfigurations": [
                {
                    "name": "loadBalancerFrontEnd1",
                    "properties": {
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'publicIP1')]"
                        }
                    }
                }
            ],
            "backendAddressPools": [
                {
                    "name": "loadBalancerBackEndPool1"
                }
            ],
            "inboundNatRules": [
                {
                    "name": "natRule1",
                    "properties": {
                        "frontendIPConfiguration": {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', 'VMWebLB', 'loadBalancerFrontEnd1')]"
                        },
                        "protocol": "Tcp",
                        "frontendPort": 50001,
                        "backendPort": 3389,
                        "enableFloatingIP": false
                    }
                }
            ],
            "loadBalancingRules": [
                {
                    "name": "LBRule1",
                    "properties": {
                        "frontendIPConfiguration": {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', 'VMWebLB', 'loadBalancerFrontEnd1')]"
                        },
                        "backendAddressPool": {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'VMWebLB', 'loadBalancerBackEndPool1')]"
                        },
                        "protocol": "Tcp",
                        "frontendPort": 80,
                        "backendPort": 80,
                        "enableFloatingIP": false,
                        "idleTimeoutInMinutes": 5,
                        "probe": {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/probes', 'VMWebLB', 'tcpProbe1')]"
                        }
                    }
                }
            ],
            "probes": [
                {
                    "name": "tcpProbe1",
                    "properties": {
                        "protocol": "Tcp",
                        "port": 80,
                        "intervalInSeconds": 5,
                        "numberOfProbes": 2
                    }
                }
            ]
        }
    }],
    "outputs": {}
}
